refactoring, bugfix, animations and emoji

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Scissors Paper</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <h1>Rock Scissors Paper</h1>
@@ -41,6 +41,6 @@
     </table>
 </div>
 
-<script src="game.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
