final round, bugfix

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <main style="max-width:800px; margin:0 auto;">
   <section class="about-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px;">
-    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-left">Project Description</h2>
+    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-left">✂️ Project Description</h2>
     <p class="fade-in-up">
       <strong class="highlight-text">"Rock, Paper, Scissors" Website</strong><br><br>
       The website is the first stage of a larger project and represents an interactive game where the user competes against a computer opponent in the classic "Rock, Paper, Scissors" game.<br><br>
@@ -34,7 +34,7 @@
   </section>
 
   <section class="about-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px;">
-    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">Project Stages</h2>
+    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">📄 Project Stages</h2>
     <div class="stage-item fade-in-up">
       <div class="stage-title">
         <span class="stage-number">1</span>
@@ -70,7 +70,7 @@
   </section>
 
   <section class="about-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px;">
-    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">Inspiration</h2>
+    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">Inspiration 🪨</h2>
     <p class="fade-in-up">
       The original idea for this project belongs to <strong class="highlight-text">Mark Rober</strong>, who created a robotic hand that always wins at "Rock, Paper, Scissors." I was inspired by his work and decided to try to recreate this project myself.
     </p>
@@ -83,13 +83,14 @@
   </section>
 
   <section class="about-section try-block fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px; text-align:center;">
-    <h2 style="color:var(--primary-color); margin-bottom:18px;">Challenge!</h2>
-    <p style="font-size:1.1em; margin-bottom:22px;">Try not to lose to me in <strong>Rock, Paper, Scissors</strong> — click the button and start the game!</p>
+    <h2 style="color:var(--primary-color); margin-bottom:10px;">Challenge!</h2>
+    <p style="font-size:5em; margin-bottom:2px;">🪨 ✂️ 📄</p>
+    <p style="font-size:1.1em; margin-bottom:22px;">Try not to lose to me in <strong>Rock, Scissors, Paper</strong> — click the button and start the game!</p>
     <a href="index.html" class="try-game-button">Play Now</a>
   </section>
 
   <section class="about-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px;">
-    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">Technical Implementation</h2>
+    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-right">📄Technical Implementation</h2>
 
     <div class="fade-in-up">
       <h3 style="color:var(--primary-color); margin:20px 0 10px;">Frontend</h3>
@@ -205,27 +206,27 @@
   </section>
 
   <section class="about-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px;">
-    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-left">Technologies</h2>
+    <h2 style="color:var(--secondary-color); margin-bottom:20px;" class="slide-in-left">Technologies ✂️</h2>
     <div class="image-gallery fade-in-up">
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">HTML5</div>
+        <div style="background:linear-gradient(45deg, #27ae60, #217dbb); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">HTML5</div>
       </div>
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">CSS3</div>
+        <div style="background:linear-gradient(45deg,  #217dbb, #27ae60); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">CSS3</div>
       </div>
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">JS</div>
+        <div style="background:linear-gradient(180deg, #217dbb, #27ae60); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">JS</div>
       </div>
     </div>
     <div class="image-gallery fade-in-up" style="animation-delay: 0.3s;">
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">PHP</div>
+        <div style="background:linear-gradient(90deg, #217dbb, #27ae60); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">PHP</div>
       </div>
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">SQLite</div>
+        <div style="background:linear-gradient(90deg, #27ae60, #217dbb); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">SQLite</div>
       </div>
       <div class="gallery-image">
-        <div style="background:#f6f6f6; height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:var(--primary-color);">AWS</div>
+        <div style="background:linear-gradient(0deg, #217dbb, #27ae60); height:100px; display:flex; align-items:center; justify-content:center; font-size:2em; color:white;">AWS</div>
       </div>
     </div>
   </section>
