--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="main-section fade-in-up" style="background:white; border-radius:12px; box-shadow:var(--shadow); padding:30px; margin-bottom:30px;">
         <div id="name-input">
             <label for="player-name" style="font-weight:500; color:var(--primary-color);">Your Name:</label>
-            <input type="text" id="player-name">
+            <input type="text" id="player-name" maxlength="15">
             <a id="start-game" class="try-game-button">Play Now</a>
         </div>
 
