--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script type="module" src="js/animations.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js?render=6Lc6c1MrAAAAAFROPC56NBZgsWrYMCnAbWL1hzVF"></script>
 </head>
 <body>
 <header class="fade-in">
